@@ -27,6 +27,7 @@
 #include <string.h>
 #include <unistd.h>
 
+#include "colors.h"
 #include "command-line.h"
 #include "compiler.h"
 #include "db-ctl-base.h"
@@ -34,7 +35,10 @@
 #include "fatal-signal.h"
 #include "openvswitch/dynamic-string.h"
 #include "openvswitch/json.h"
+#include "openvswitch/ofp-actions.h"
+#include "openvswitch/ofp-print.h"
 #include "openvswitch/shash.h"
+#include "openvswitch/vconn.h"
 #include "openvswitch/vlog.h"
 #include "ovn/lib/ovn-sb-idl.h"
 #include "ovn/lib/ovn-util.h"
@@ -736,6 +740,81 @@ is_partial_uuid_match(const struct uuid *uuid, const char *match)
     return !strncmp(s1, s2, strlen(s2));
 }
 
+static char *
+default_ovs(void)
+{
+    return xasprintf("unix:%s/br-int.mgmt", ovs_rundir());
+}
+
+static struct vconn *
+sbctl_open_vconn(struct shash *options)
+{
+    struct shash_node *ovs = shash_find(options, "--ovs");
+    if (!ovs) {
+        return NULL;
+    }
+
+    char *remote = ovs->data ? xstrdup(ovs->data) : default_ovs();
+    struct vconn *vconn;
+    int retval = vconn_open_block(remote, 1 << OFP13_VERSION, 0, &vconn);
+    if (retval) {
+        VLOG_WARN("%s: connection failed (%s)", remote, ovs_strerror(retval));
+    }
+    free(remote);
+    return vconn;
+}
+
+static void
+sbctl_dump_openflow(struct vconn *vconn, const struct uuid *uuid, bool stats)
+{
+    struct ofputil_flow_stats_request fsr = {
+        .cookie = htonll(uuid->parts[0]),
+        .cookie_mask = OVS_BE64_MAX,
+        .out_port = OFPP_ANY,
+        .out_group = OFPG_ANY,
+        .table_id = OFPTT_ALL,
+    };
+
+    struct ofputil_flow_stats *fses;
+    size_t n_fses;
+    int error = vconn_dump_flows(vconn, &fsr, OFPUTIL_P_OF13_OXM,
+                                 &fses, &n_fses);
+    if (error) {
+        VLOG_WARN("%s: error obtaining flow stats (%s)",
+                  vconn_get_name(vconn), ovs_strerror(error));
+        return;
+    }
+
+    if (n_fses) {
+        struct ds s = DS_EMPTY_INITIALIZER;
+        for (size_t i = 0; i < n_fses; i++) {
+            const struct ofputil_flow_stats *fs = &fses[i];
+
+            ds_clear(&s);
+            if (stats) {
+                ofp_print_flow_stats(&s, fs);
+            } else {
+                ds_put_format(&s, " %stable=%s%"PRIu8" ",
+                              colors.special, colors.end, fs->table_id);
+                match_format(&fs->match, &s, OFP_DEFAULT_PRIORITY);
+                if (ds_last(&s) != ' ') {
+                    ds_put_char(&s, ' ');
+                }
+
+                ds_put_format(&s, "%sactions=%s", colors.actions, colors.end);
+                ofpacts_format(fs->ofpacts, fs->ofpacts_len, &s);
+            }
+            printf("   %s\n", ds_cstr(&s));
+        }
+        ds_destroy(&s);
+    }
+
+    for (size_t i = 0; i < n_fses; i++) {
+        free(CONST_CAST(struct ofpact *, fses[i].ofpacts));
+    }
+    free(fses);
+}
+
 static void
 cmd_lflow_list(struct ctl_context *ctx)
 {
@@ -758,6 +837,9 @@ cmd_lflow_list(struct ctl_context *ctx)
         }
         ctx->argv[i] = s;
     }
+
+    struct vconn *vconn = sbctl_open_vconn(&ctx->options);
+    bool stats = shash_find(&ctx->options, "--stats") != NULL;
 
     const struct sbrec_logical_flow **lflows = NULL;
     size_t n_flows = 0;
@@ -824,9 +906,13 @@ cmd_lflow_list(struct ctl_context *ctx)
                lflow->table_id,
                smap_get_def(&lflow->external_ids, "stage-name", ""),
                lflow->priority, lflow->match, lflow->actions);
+        if (vconn) {
+            sbctl_dump_openflow(vconn, &lflow->header_.uuid, stats);
+        }
         prev = lflow;
     }
 
+    vconn_close(vconn);
     free(lflows);
 }
 
@@ -1298,10 +1384,10 @@ static const struct ctl_command_syntax sbctl_commands[] = {
     /* Logical flow commands */
     {"lflow-list", 0, INT_MAX, "[DATAPATH] [LFLOW...]",
      pre_get_info, cmd_lflow_list, NULL,
-     "--uuid", RO},
+     "--uuid,--ovs?,--stats", RO},
     {"dump-flows", 0, INT_MAX, "[DATAPATH] [LFLOW...]",
      pre_get_info, cmd_lflow_list, NULL,
-     "--uuid", RO}, /* Friendly alias for lflow-list */
+     "--uuid,--ovs?,--stats", RO}, /* Friendly alias for lflow-list */
 
     /* Connection commands. */
     {"get-connection", 0, 0, "", pre_connection, cmd_get_connection, NULL, "", RO},
